scroll up botton and white space fixed

--- a/src/components/5.Projects/projects.css
+++ b/src/components/5.Projects/projects.css
@@ -132,7 +132,9 @@
   margin-left: -500px;
   margin-top: -500px;
   border-radius: 35%;
-  background: rgba(214, 208, 200, 1);
+  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-size: cover;
+  color: transparent;
   animation: wave 15s infinite linear;
   z-index: 9;
 }
